##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-09-02	tboggs <tboggs@users.sourceforge.net>

    Default WX_GL_DEPTH_SIZE to 24 bits.

    * spectra.py (SpySettings): Changed WX_GL_DEPTH_SIZE to 24.

    Added `show_progress` to settings object.

    * spectral.spectral.SpySettings:
      (show_progress): New member
    * utilities/status:
      (__init__): Remove self.silent and use settings.show_progress instead.
      (display_percentage): ditto
      (update_percentage): ditto
      (end_percentage): ditto

    Encapsulate Status members.

    * utilities/status.py:
      - pre-Text -> _pretext
      - percentage -> _percentage
      - overwriteLine -> _overwrite
      - percentFormat -> _percent_fmt
      - textLength -> _text_len
      (update_percentage): member name changes
      (end_percentage): ditto
      (write): ditto

    
    Encapsulate status object:

    * algorithms/algorithms.py:
      (mean_cov): Use spectral._status
      (PrincipalComponents): ditto
    * algorithms/classifiers:
      (Classifier): ditto
    * algorithms/clustering:
      (kmeans): ditto
      (kmeans_ndarray): ditto
    * algorithms/detectors.py: (RXW): ditto
    * algorithms/perceptron.py (Perceptron): ditto


    Fixed cube texture edge display issue

    * graphics.hypercube.py:
      (HypercubeWindow.load_textures): Set texture wrap parameter to GL_CLAMP.
      
2013-08-13	tboggs <tboggs@users.sourceforge.net>

    Added `imshow` wrapper around matplotlib's imshow.

    * graphics/__init__.py: Import `imshow`.
    * graphics/graphics.py(imshow): New function.

    Automatically determine image format in `save_rgb`.

    * graphics/graphics(save_rgb): Let PIL determine image format.

    Add image band info to saved file. Corrected band_quantity member name.

    * io/envi.pi: